--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 requests = "^2.32.5"
+platformdirs = "^4.4.0"
+poetry-core = ">=2.0.0,<3.0.0"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -15,6 +17,11 @@ flake8 = "^7.3.0"
 mypy = "^1.18.1"
 black = "^25.1.0"
 isort = "^6.0.1"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.2"
+pytest-cov = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
