--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 requests = "^2.32.5"
 platformdirs = "^4.4.0"
 poetry-core = ">=2.0.0,<3.0.0"
+python-dotenv = "^1.1.1"
 
 
 [tool.poetry.group.lint.dependencies]
