--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.32.5"
 platformdirs = "^4.4.0"
 poetry-core = ">=2.0.0,<3.0.0"
 python-dotenv = "^1.1.1"
+openpyxl = "^3.1.5"
 
 
 [tool.poetry.group.lint.dependencies]
